# Large_Scale_VNF_Placement

./: .gitignore
alg/: Cargo.toml  Config.yml
alg/src/: main.rs
alg/src/algorithms/: ibea.rs  moead.rs  mw_ppls.rs  pplsd.rs
alg/src/models/: datacentre.rs  mm1_queueing_model.rs  perc_len_model.rs  routing.rs  service.rs
alg/src/operators/: crossover.rs  distance_matrix.rs  initialisation.rs  mapping.rs  mod.rs  selection.rs  solution.rs
alg/src/utilities/: args.rs  cli.yml  math.rs  metrics.rs  mod.rs  nds.rs
batch/: run_0_dc_0.sh  run_0_dc_1.sh  run_0_dc_2.sh  run_0_dc_3.sh  run_0_dc_4.sh  run_0_ft_0.sh  run_0_ft_1.sh  run_0_ft_2.sh  run_0_ft_3.sh  run_0_ft_4.sh  run_0_ls_0.sh  run_0_ls_1.sh  run_0_ls_2.sh  run_0_ls_3.sh  run_0_ls_4.sh  run_1_dc.sh  run_1_ft.sh  run_1_ls.sh  run_2_dc_large.sh  run_2_dc_medium.sh  run_2_dc_small.sh  run_2_dc_vlarge.sh  run_2_ft_large.sh  run_2_ft_medium.sh  run_2_ft_small.sh  run_2_ft_vlarge.sh  run_2_ls_large.sh  run_2_ls_medium.sh  run_2_ls_small.sh  run_2_ls_vlarge.sh  run_3_dc_large.sh  run_3_dc_medium.sh  run_3_dc_small.sh  run_3_dc_vlarge.sh  run_3_ft_large.sh  run_3_ft_medium.sh  run_3_ft_small.sh  run_3_ft_vlarge.sh  run_3_ls_large.sh  run_3_ls_medium.sh  (+153 more)
paper/: bibliography.bib  conclusions.tex  introduction.tex  literature_review.tex  main.tex  objective_functions.tex  optimisation.tex  performance_evaluation.tex  problem_formulation.tex
processing/: copy_files.m
processing/1/: get_best_subset.m  test_hv.m
processing/2/: to_results.m
processing/3/: aggregate_hv.m  aggregate_sc.m  aggregate_times.m
(+64 files in other folders)
