[package]
name = "nfv_ag_journal"
version = "0.1.0"
authors = ["Joe Billingsley <jb@josephbillingsley.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
rand = "0.8.0"
chrono = "0.4"
rayon = "1.5.0"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
clap = {version = "~2.27.0", features = ["yaml"]}